# monty

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASING.md  build.sh  pyproject.toml
.github/actions/build-pgo-wheel/: action.yml
.github/workflows/: ci.yml  codspeed.yml  init-npm-packages.yml
crates/aq/: Cargo.toml
crates/aq/src/: lib.rs
crates/monty/: Cargo.toml
crates/monty-bench/: Cargo.toml
crates/monty-bench/benches/: pool.rs
crates/monty-cli/: Cargo.toml  README.md  pyproject.toml
crates/monty-cli/src/: main.rs  subprocess.rs
crates/monty-cli/tests/: subprocess.rs
crates/monty-datatest/src/: main.rs
crates/monty-js/: .gitignore  .prettierignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
crates/monty-js/__test__/: async.spec.ts  basic.spec.ts  exceptions.spec.ts  external.spec.ts  feed_start.spec.ts  helpers.ts  inputs.spec.ts  limits.spec.ts  mount.spec.ts  pool.spec.ts  print.spec.ts  repl.spec.ts  type_check.spec.ts  types.spec.ts  wasm_async.spec.ts  wasm_basic.spec.ts  wasm_exceptions.spec.ts  wasm_external.spec.ts  (+9 more)
crates/monty-pool/: Cargo.toml
crates/monty-proto/: Cargo.toml
crates/monty-python/: Cargo.toml  README.md  example.py  exercise.py  pyproject.toml
examples/expense_analysis/: main.py
examples/sql_playground/: main.py
examples/web_scraper/: main.py
limitations/: filesystem.md  open.md  pool-architecture.md  print.md  resource_limits.md
scripts/: bench_json.py  bench_type_checking.py  iter_test_methods.py  run_nasty_code.py  startup_performance.py  test_fixtures.py
(+120 files in other folders)
